--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: go
+
+before_install:
+    - go get github.com/axw/gocov/gocov
+    - go get github.com/mattn/goveralls
+    - go get golang.org/x/tools/cmd/cover
+
 go: 
- - 1.1
- - 1.2
- - 1.3
- - release
- - tip
+    - 1.3
+    - release
+    - tip
 
 script:
- - make test
+    - make test
+    - $HOME/gopath/bin/goveralls -repotoken $COVERALLS_REPO_TOKEN
