--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ before_install:
     - go get github.com/mattn/goveralls
     - go get golang.org/x/tools/cmd/cover
 
-go: 
+go:
     - 1.3
     - release
     - tip
 
 script:
     - make test
-    - $HOME/gopath/bin/goveralls -repotoken $COVERALLS_REPO_TOKEN
+    - make goveralls
